[package]
name = "multiplicative-persistence-calculator-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "multiplicative_persistence_calculator"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4.2", features = ["derive"] }
